--- a/templates/footer.html
+++ b/templates/footer.html
@@ -5,7 +5,7 @@
 
         <div class="col-lg-3 col-md-6">
           <div class="footer-info">
-            <h3>OBSERVATORIO DE MOVILIDAD DE TUNJA<span>.</span></h3>
+            <h3>OBSERVATORIO DE MOVILIDAD Y ACCESIBILIDAD DE TUNJA<span>.</span></h3>
          
           </div>
         </div>
